# study_server_project

./: pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_26_2352-768ce1dd967a_create_users_table.py
database/: db_helper.py
fastapi_app/: main.py
fastapi_app/core/: __init__.py  config.py
fastapi_app/crud/: __init__.py  crud_user.py
fastapi_app/database/: __init__.py  db_helper.py
fastapi_app/database/models/: __init__.py  base.py  user.py
fastapi_app/exceptions_and_handlers/: __init__.py  exceptions.py
fastapi_app/routers/: __init__.py  user_router.py
fastapi_app/schemas/: __init__.py  user.py
